k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldenpipe-system
  labels:
    name: goldenpipe-system
    app.kubernetes.io/name: goldenpipe
    app.kubernetes.io/part-of: goldenpipe
